Kamen/kamenstyle.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, sans-serif;
}

header {
  position: sticky;
  top: 0;
  width: 100%;
  height: 7em;
  background: #2f5233;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
  transition: background-color 0.3s ease;
  z-index: 1000;
  overflow: hidden;
}

.logo {
  display: flex;
  align-items: center;
  color: white;
  font-size: 2.3rem;
  font-weight: bold;
  gap: 0.5rem;
  margin-left: 1em;
}

.logo span {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.logo span small {
  font-size: 0.7em;
  color: rgba(255, 255, 255, 0.733);
}

.logo-img {
  width: 5rem;
  height: 5rem;
  border-radius: 45%;
  margin-right: 0.5rem;
}

.menu {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  margin-right: 1.47em;
}

.menu a {
  margin: 0 1em;
  text-decoration: none;
  color: #333;
  transition: color 0.3s ease;
}

.menu a img {
  width: 2.5rem;
  height: 2.5rem;
  transition: 0.3s;
}

.menu a img:hover {
  opacity: 0.5;
}

.background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -2;
  background: linear-gradient(180deg, #6d9777 10%, #095012 100%);
  opacity: 0.95;
}

.background-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  opacity: 0.8;
  background: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.3) 0%,
    rgba(0, 0, 0, 0.6) 100%
  );
  mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
  -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
}

.image-back {
  position: relative;
  width: 100%;
  height: 50vh;
  overflow: hidden;
  z-index: -1;
}

.page-desc {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: 1rem auto;
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 1rem;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
  padding: 3rem;
  color: #333;
  font-size: 1.2rem;
  line-height: 1.8;
  flex-direction: column;
  position: relative;
  width: 80%;
}

.page-desc h2 {
  position: absolute;
  top: 0.5rem;
  left: 50%;
  transform: translateX(-50%);
  margin: 0;
  text-align: center;
  width: auto;
  margin-bottom: 0rem;
}

.gallery-wrapper {
  display: flex;
  justify-content: center; 
  align-items: center;
  width: 100%;
  padding: 0;
  box-sizing: border-box;
  margin: 0 auto;
  overflow: hidden;
}

.gallery {
  margin: 0 auto;
  width: auto;
  display: block;
  padding: 2em;
}

.gallery-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1em;
  border-radius: 1em;
  padding: 2em;
  background-color: rgba(255, 255, 255, 0.5);
  color: #2f2d2d;
  box-sizing: border-box;
  font-size: 1.15em;
  min-width: 16em;
  max-width: 20em;
  width: 100%;
  margin: 1em auto;
  transition: transform 0.3s ease;
}

.gallery-image {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  flex: none;
  max-width: 100%;
  margin-bottom: 0.5em;
}

.gallery-image img {
  width: 120%;
  height: auto;
  border-radius: 0.5em;
}

.gallery-divider {
  width: 80%;
  height: 2px;
  background: #2f5233;
  margin: 1em 0;
  border: none;
}

.gallery-text {
  width: 100%;
  font-size: 1.15em;
  color: #000000;
  text-align: center;
  padding: 0;
  box-sizing: border-box;
  line-height: 1.5;
  margin-top: auto;
}

.gallery-text p{
  color: #1d4422;
}

footer {
  position: bottom;
  z-index: 1;
  width: 100%;
  background-color: #333;
  color: white;
  text-align: center;
  padding: 1rem 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 0;
  transition: background-color 0.3s ease;
  font-size: 1.2rem;
}

.footer-content {
  margin-left: 3rem;
  text-align: left;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.5rem;
}

.footer-content a {
  color: green;
  text-decoration: none;
  transition: color 0.3s ease;
}

.footer-content a:hover {
  color: gray;
}

.footer-menu {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-right: 2rem;
}

.footer-menu a {
  color: #fff;
  text-decoration: none;
  transition: color 0.3s ease;
  margin-bottom: 5px;
  margin: 0 1em;
  font-size: 1.2rem;
}

.footer-menu a:hover {
  color: gray;
}

#topBtn {
  position: fixed;
  bottom: 1.875rem;
  right: 1.875rem;
  z-index: 100;
  display: none;
  border: none;
  outline: none;
  background-color: rgba(24, 112, 43, 0.8);
  cursor: pointer;
  padding: 0.9375rem;
  border-radius: 10px;
  font-size: 1.125rem;
  color: white;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
  opacity: 0;
  transform: translateY(1.25rem);
  transition: opacity 0.3s ease, transform 0.3s ease;
  animation: fadeOut 0.3s ease forwards; 
}

#topBtn.show {
  display: block;
  animation: fadeIn 0.3s ease forwards; 
}

#topBtn:not(.show) {
  animation: fadeOut 0.3s ease forwards;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(1.25rem);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
    transform: translateY(0);
  }
  to {
    opacity: 0;
    transform: translateY(1.25rem);
  }
}

.scrolled header {
  background-color: #1e3a27;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.scrolled .menu a img {
  background-color: white;
  border-radius: 30%;
  padding: 0.3rem;
  transition: 0.3s;
}

.scrolled .menu a img:hover {
  opacity: 0.5;
}

.scrolled .menu a {
  color: #fff;
}

.hero {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  height: 30vh;
  text-align: center;
  background: linear-gradient(to bottom, #2f5233 0%, #3f7449 100%);
  color: #fff;
  overflow: hidden;
}

.hero-text {
  z-index: 2;
  padding: 2rem;
  text-align: center;
  margin-top: 5rem;
}

.hero h1 {
  font-size: 5rem;
  margin-bottom: 2rem;
}

.hero p {
  font-size: 2rem;
  margin-bottom: 2rem;
  color: #fff;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.image-background {
  position: relative;
  width: 100%;
  height: 140vh;
  overflow: hidden;
  z-index: -1;
}

#desc {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  text-align: left;
  margin: -100rem auto 2rem auto;
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 1rem;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
  padding: 2rem 3rem;
  width: 80%;
  max-width: 1200px;
  z-index: 10;
}

#desc .text-content {
  flex: 1;
  padding-right: 2rem;
}

#desc h3 {
  color: #2f5233;
  font-size: 1.5rem;
  text-align: center;
  margin-bottom: 1.5rem;
}

#desc p {
  color: #333;
  line-height: 1.6;
  margin-bottom: 1.5rem;
  text-align: left;
}

#desc iframe {
  width: 100%;
  max-width: 34.375rem;
  height: 28.125rem;
  border-radius: 0.5rem;
  margin: 0;
}

.carousel-container {
  width: 80%;
  max-width: 75rem;
  margin: 3rem auto;
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 1rem;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
  padding: 2rem;
  position: relative;
  z-index: 10;
}

.carousel-container h3 {
  color: #2f5233;
  font-size: 1.5rem;
  text-align: center;
  margin-bottom: 1.5rem;
}

.carousel {
  position: relative;
  overflow: hidden;
  border-radius: 0.5rem;
  height: 45em;
  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
  padding: 0;
  background-color: rgba(0, 0, 0, 0.03);
}

.carousel-track {
  display: flex;
  transition: transform 0.5s ease;
  height: 100%;
  align-items: center;
  width: 100%;
}

.carousel-slide {
  min-width: 100%;
  height: 100%;
  padding: 0;
  opacity: 0.6;
  transition: opacity 0.3s ease, transform 0.3s ease;
  display: flex;
  justify-content: center;
  align-items: center;
}

.carousel-slide.active {
  opacity: 1;
  transform: scale(1.0);
}

.carousel-slide img {
  max-width: 95%;
  max-height: 95%;
  width: auto;
  height: auto;
  object-fit: contain;
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 0.5rem;
  transition: transform 0.3s ease;
  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
  padding: 1rem;
}

.carousel-slide:hover img {
  transform: scale(1.02);
}

.carousel-button {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background: rgba(47, 82, 51, 0.7);
  color: white;
  border: none;
  border-radius: 50%;
  width: 2.5rem;
  height: 2.5rem;
  font-size: 1.2rem;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 10;
  transition: background-color 0.3s;
}

.carousel-button:hover {
  background: rgba(47, 82, 51, 0.9);
}

.prev-button {
  left: 0.625rem;
}

.next-button {
  right: 0.625rem;
}

.carousel-dots {
  display: flex;
  justify-content: center;
  margin-top: 1rem;
}

.dot {
  width: 0.75rem;
  height: 0.75rem;
  background-color: rgba(47, 82, 51, 0.3);
  border-radius: 50%;
  margin: 0 0.5rem;
  cursor: pointer;
  transition: background-color 0.3s;
}

.dot.active {
  background-color: #2f5233;
}

.howTo{
  width: 80%;
  max-width: 75rem;
  margin: 3rem auto;
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 1rem;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
  padding: 2rem;
  position: relative;
  z-index: 10;
}

.howTo h3 {
  color: #2f5233;
  font-size: 1.5rem;
  text-align: center;
  margin-bottom: 1.5rem;
}

.howTo ul {
  list-style-type: none;
  padding: 0 2rem;
}

.howTo li {
  position: relative;
  padding-left: 1.5rem;
  margin-bottom: 0.8rem;
  color: #333;
  font-size: 1.1rem;
}

.howTo li:before {
  content: "✓";
  position: absolute;
  left: 0;
  color: #2f5233;
  font-weight: bold;
}

@media (max-width: 992px) {
  #desc {
    flex-direction: column;
  }
  
  #desc .text-content {
    padding-right: 0;
    margin-bottom: 2rem;
  }
  
  #desc iframe {
    max-width: 100%;
  }
}

@media (max-width: 768px) {
  .carousel {
    height: 21.875rem;
  }
  
  .carousel-button {
    width: 1.875rem;
    height: 1.875rem;
    font-size: 1rem;
  }
}

